--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -3,6 +3,7 @@
   height: 540px;
   grid-area: container;
   background-color: #fff;
+  border: 1px solid #ededed;
   /* background-color: rgb(242, 242, 242); */
   opacity: 1;
 }
@@ -10,6 +11,7 @@
   background-color: #069583;
   color: #fff;
   transition: 0.4s ease;
+  border: 1px solid #069583;
 
   /* transition: all 0.6s ease-in-out; */
 }
