--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,8 +2,8 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 30px;
+  margin-bottom: 0;
   width: 1280px;
   display: flex;
   flex-direction: row;
