--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,8 +1,8 @@
 .header__link {
   text-transform: uppercase;
 
-  color: black;
-  font-weight: 900;
+  color: #069583;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1;
   text-decoration: none;
