--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
   background-color: #f0f4f6;
   width: 1280px;
-  height: 400px;
-  margin: 50 auto;
+  height: 360px;
+  margin: 50px auto;
 }
