--- a/blocks/project/__viewer/project__viewer.css
+++ b/blocks/project/__viewer/project__viewer.css
@@ -6,7 +6,7 @@
   height: 540px;
   /* grid-area: container; */
   /* background-color: #fff; */
-  border: 1px solid #ededed;
+  /* border: 1px solid #ededed; */
 }
 
 .adsk-viewing-viewer #toolbar-modelStructureTool{display:none!important}
