--- a/blocks/container/__description/container__description.css
+++ b/blocks/container/__description/container__description.css
@@ -1,8 +1,8 @@
 .container__description {
   margin-top: 50px;
   margin-bottom: 0;
-  margin-left: 60px;
-  margin-right: 60px;
+  margin-left: 0;
+  margin-right: 0;
   font-size: 16px;
   line-height: 26px;
 }
