--- a/blocks/container/__location/container__location.css
+++ b/blocks/container/__location/container__location.css
@@ -1,7 +1,7 @@
 .container__location {
   margin-top: 25px;
   margin-bottom: 25px;
-  margin-left: 60px;
-  margin-right: 60px;
+  margin-left: 0;
+  margin-right: 0;
 
 }
