--- a/blocks/project/__viewer/project__viewer.css
+++ b/blocks/project/__viewer/project__viewer.css
@@ -1,19 +1,7 @@
 .project__viewer {
+  display: flex;
   grid-area: viewer;
-  /* width: 640px;
-  height: 540px; */
   width: 640px;
   height: 540px;
-  /* grid-area: container; */
-  /* background-color: #fff; */
-  /* border: 1px solid #ededed; */
+  z-index: 0;
 }
-
-.adsk-viewing-viewer #toolbar-modelStructureTool{display:none!important}
-.adsk-viewing-viewer #toolbar-explodeTool{display:none!important}
-.adsk-viewing-viewer #toolbar-measurementSubmenuTool{display:none!important}
-.adsk-viewing-viewer #settingsTools{display:none!important}
-.adsk-viewing-viewer #navTools{display:none!important}
-
-
-
