--- a/blocks/project/project.css
+++ b/blocks/project/project.css
@@ -9,11 +9,11 @@
 }
 
 .project:nth-child(2n) {
-  width: 100%;
+  /* width: 100%;
   margin: 0;
   display: grid;
   gap: 0;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr; */
   grid-template-areas: 'container viewer';
 }
