--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
+@import url(../vendor/viewerTools.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
@@ -7,11 +8,13 @@
 @import url(../blocks/project/project.css);
 @import url(../blocks/container/container.css);
 @import url(../blocks/container/__title/container__title.css);
-/* @import url(../blocks/project/__container/project__container.css); */
 @import url(../blocks/project/__viewer/project__viewer.css);
 @import url(../blocks/footer/__copyright/footer__copyright1.css);
 @import url(../blocks/container/__location/container__location.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/container/__description/container__description.css);
-@import url(../blocks/lead/lead.css);
 @import url(../blocks/logo/logo.css);
+/* @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_active/popup_active.css);
+@import url(../blocks/screen/screen.css);
+@import url(../blocks/screen/__close/screen__close.css); */
