--- a/blocks/container/__title/container__title.css
+++ b/blocks/container/__title/container__title.css
@@ -1,6 +1,6 @@
 .container__title {
-  margin: 60px 0;
-  font-size: 30px;
+  margin: 30px 0 30px 0 ;
+  font-size: 26px;
   line-height: 36px;
   font-weight: 900;
 
