--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   border: 1px solid #ededed;
   opacity: 1;
-  padding: 0 60px;
+  padding: 40px 60px;
 }
 
 .container:hover {
