--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url(../vendor/viewerTools.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/projects/projects.css);
 @import url(../blocks/project/project.css);
